--- a/index.html
+++ b/index.html
@@ -114,10 +114,18 @@
                     <p><i class="fa-solid fa-paper-plane"></i>Shoboyekunle@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>09059898276</p>
                     <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="https://x.com/SO_Coder">
+                            <i class="fa-brands fa-twitter-square"></i>
+                        </a>
+                        <a href="https://www.instagram.com" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/oyekunle">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
                     </div>
                     <a href="images/SHOBOWALE OYEKUNLE.pdf" download class="btn btn2">Download CV</a>
                 </div>
